Add glarkio theme

--- a/kitchen-sink.html
+++ b/kitchen-sink.html
@@ -96,6 +96,7 @@
             <option value="ace/theme/tomorrow_night_eighties">Tomorrow Night 80s</option>
             <option value="ace/theme/twilight">Twilight</option>    
             <option value="ace/theme/vibrant_ink">Vibrant Ink</option>
+            <option value="ace/theme/glarkio">glarkio</option>
           </optgroup>
         </select>
       </td>
